# Async-ery

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  main  timing
.github/workflows/: cmake-single-platform.yml
examples/: concurrency.cpp  error_example.cpp  io.txt  io_example.cpp  main_example.cpp
include/: io_request.h  scheduler.h  task.h  task_factory.h  task_io_source.h  task_timer_source.h  task_value_source.h  types.h
include/async_lib/: async_result.h  task.h  task_factory.h  task_io_source.h  task_timer_source.h  task_value_source.h  types.h
include/cell/: cell.h  tracking_once_cell.h  when_all_cell.h  when_any_cell.h  write_once_cell.h
include/polling/: io_poll_source.h  poll_source.h  timing_poll_source.h
include/scheduler/: circular_queue.h  scheduler.h  types.h
include/util/: aio.h  job_queue.h  spinlock.h
src/: CMakeLists.txt  scheduler.cpp
src/async_lib/: task_io_source.cpp  task_timer_source.cpp
src/cell/: CMakeLists.txt
src/cell/include/cell/: cell.h  cell_result.h  tracking_once_cell.h  when_all_cell.h  when_any_cell.h  write_once_cell.h
src/concurrency/: CMakeLists.txt
src/concurrency/include/concurrency/: spinlock.h
src/concurrency/src/: spinlock.cpp
src/io/: CMakeLists.txt
src/io/include/io/: aio.h  aio_request_result.h  io_poll_source.h  io_request.h  types.h
src/io/src/: aio.cpp  io_poll_source.cpp  io_request.cpp
src/job_scheduler/: CMakeLists.txt
src/job_scheduler/include/interface/job_scheduler/: job.h  job_scheduler_intf.h  poll_source.h  scheduler_factory.h  scheduling_context.h
src/job_scheduler/include/job_scheduler/: circular_queue.h  job_queue.h  job_scheduler.h  job_worker.h  worker_pool.h
src/job_scheduler/include/job_scheduler/interface/: job.h  job_scheduler_intf.h  poll_source.h  scheduling_context.h
src/job_scheduler/src/: circular_queue.cpp  job_queue.cpp  job_scheduler.cpp  job_worker.cpp  scheduler_factory.cpp  worker_pool.cpp
src/polling/: timing_poll_source.cpp
src/scheduler/: CMakeLists.txt  circular_queue.cpp  scheduler.cpp
src/scheduler/include/interface/scheduler/: job.h  poll_source.h  scheduler_factory.h  scheduler_intf.h  scheduling_context.h
src/scheduler/include/scheduler/: circular_queue.h  job_queue.h  poll_source.h  scheduler.h  types.h  worker.h  worker_pool.h
src/scheduler/src/: circular_queue.cpp  job_queue.cpp  scheduler.cpp  scheduler_factory.cpp  worker.cpp  worker_pool.cpp
src/timing/: CMakeLists.txt
src/timing/include/timing/: timing_poll_source.h
src/timing/include/timing/structures/: timing_wheel.h  timing_wheel_hierarchical.h
src/timing/src/: timing_poll_source.cpp
src/util/: job_queue.cpp  spinlock.cpp
tests/: io_test.cpp  main.cpp  queue_test.cpp  stress.cpp  timing_test.cpp
